[package]
name = "tree-sitter-tsql"
description = "Tree-sitter parser for MSSQL T-SQL inspired by the really powerful alround SQL parser by DerekStride (https://github.com/DerekStride/tree-sitter-sql)"
version = "0.1.0"
authors = ["krixgris"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tsql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/krixgris/tree-sitter-tsql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
