[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tsql"
description = "Tree-sitter parser for MSSQL T-SQL inspired by the really powerful alround SQL parser by DerekStride (https://github.com/DerekStride/tree-sitter-sql)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tsql"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "krixgris" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/krixgris/tree-sitter-tsql"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
